base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic
  template:
    metadata:
      labels:
        app: petclinic
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: petclinic
          image: ghcr.io/raphikri/spring-petclinic:4.0.0-SNAPSHOT # Remplacez par l'image GHCR appropriée
          ports:
            - containerPort: 8080
          startupProbe:
            httpGet:
              path: /tp6/actuator/health/readiness   # Endpoint Spring Boot Actuator pour vérifier la disponibilité
              port: 8080                               # Port d'écoute du conteneur
            initialDelaySeconds: 10                   # Délai avant la première tentative (10s)
            periodSeconds: 10                         # Intervalle entre les tentatives (10s)
            timeoutSeconds: 2                         # Timeout pour chaque requête HTTP (2s)
            failureThreshold: 30                      # Nombre d'échecs tolérés avant conclusion d'échec (30 tentatives
          livenessProbe:
            httpGet:
              path: /tp6/actuator/health/liveness   # Endpoint Spring Boot Actuator pour vérifier la vivacité
              port: 8080                               # Port d'écoute du conteneur
            initialDelaySeconds: 10                   # Délai avant la première tentative (10s)
            periodSeconds: 10                         # Intervalle entre les tentatives (10s)
            timeoutSeconds: 2                         # Timeout pour chaque requête HTTP (2s)
            failureThreshold: 3                       # Nombre d'échecs tolérés avant conclusion d'échec (30 tentatives
          readinessProbe:
            httpGet:
              path: /tp6/actuator/health/readiness   # Endpoint Spring Boot Actuator pour vérifier la disponibilité
              port: 8080                               # Port d'écoute du conteneur
            initialDelaySeconds: 10                   # Délai avant la première tentative (10s)
            periodSeconds: 10                         # Intervalle entre les tentatives (10s)
            timeoutSeconds: 2                         # Timeout pour chaque requête HTTP (2s)
            failureThreshold: 3                      # Nombre d'échecs tolérés avant conclusion d'échec (30 tentatives
